# ocds-babel

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  lint.yml  pypi.yml
docs/: Makefile  changelog.rst  conf.py  index.rst
docs/api/: extract.rst  translate.rst
ocds_babel/: __init__.py  extract.py  markdown_translator.py  translate.py  translate_markdown.py  translate_yaml.py
tests/: test_extract.py  test_translate.py
