[metadata]
name = ocds-babel
version = 0.3.5
author = Open Contracting Partnership
author_email = data@open-contracting.org
license = BSD
description = Provides Babel extractors and translation methods for standards like OCDS or BODS
url = https://github.com/open-contracting/ocds-babel
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
babel.extractors =
    ocds_codelist = ocds_babel.extract:extract_codelist
    ocds_schema = ocds_babel.extract:extract_schema

[options.extras_require]
markdown =
    markdown-it-py>=2
    mdformat>=0.7.11
test =
    coverage
    pytest
